--- a/style.css
+++ b/style.css
@@ -1,273 +1,28 @@
-.btn-d,
-.btn-d:hover,
-.btn-d:focus {
-    color: #FFF;
-    background: rgba(0, 0, 0, .3);
-}
-
-.btn-rd {
-    border-radius: 40px;
-}
-
-.btn-clean {
-    border: 1px solid rgba(0, 0, 0, .08);
-    border-bottom-color: rgba(0, 0, 0, .1);
-    text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
-    box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
-}
-
-.btn:hover {
-    transform: scale(1.2);
-}
-
-.icon-md {
-    font-size: 30px;
-}
-
-.icon-lg {
-    font-size: 60px;
-}
-
-.panel-sq,
-.panel-sq .panel-heading,
-.panel-sq .panel-footer {
-    border-radius: 0;
-}
-
-.panel-rd {
-    border-radius: 30px;
-}
-
-.panel-rd .panel-heading {
-    border-radius: 29px 29px 0 0;
-}
-
-.panel-rd .panel-footer {
-    border-radius: 0 0 29px 29px;
-}
-
-.scrollToTop {
-    width: 40px;
-    height: 40px;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    opacity: 0;
-    z-index: 500;
-    transition: all .3s ease-in-out;
-}
-
-.scrollToTop span {
-    margin-top: 6px;
-}
-
-.showScrollTop {
-    font-size: 14px;
-    opacity: 1;
-}
-
-a[data-lightbox] {
-    position: relative;
-    display: block;
-    text-align: center;
-}
-
-a[data-lightbox]:hover::before {
-    content: "+";
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
-    font-size: 32px;
-    width: 50px;
-    height: 50px;
-    margin-left: -25px;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, .6);
-    color: #FFF;
-    font-weight: 100;
-    z-index: 1;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-}
-
-a[data-lightbox]:hover img {
-    opacity: 0.6;
-    -webkit-animation-fill-mode: none;
-    animation-fill-mode: none;
-}
-
-#lightbox-modal {
-    display: flex;
-    align-items: center;
-}
-
-#lightbox-modal .modal-dialog {
-    width: 90%;
-    max-width: 1440px;
-    margin: 0 auto 0;
-}
-
-#lightbox-modal .modal-dialog img {
-    max-height: 90vh;
-    margin: 0 auto;
-}
-
-.lightbox-caption {
-    padding: 20px;
-    color: #FFF;
-    background: rgba(0, 0, 0, .5);
-    position: absolute;
-    left: 15px;
-    right: 15px;
-    bottom: 5px;
-}
-
-.close-lightbox {
-    color: #FFF;
-    font-size: 30px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    z-index: 20;
-    background: rgba(0, 0, 0, .5);
-    border: none;
-    line-height: 30px;
-    padding: 0 9px 5px;
-    opacity: 0.3;
-}
-
-.close-lightbox:hover,
-.next-lightbox:hover,
-.prev-lightbox:hover {
-    opacity: 1.0;
-    color: #FFF;
-}
-
-.next-lightbox,
-.prev-lightbox {
-    font-size: 20px;
-    color: rgba(255, 255, 255, .9);
-    background: rgba(0, 0, 0, .5);
-    transition: all .2s ease-in-out;
-    position: absolute;
-    top: 45%;
-    z-index: 1;
-    opacity: 0.4;
-}
-
-.next-lightbox {
-    padding: 6px 8px 1px 13px;
-    right: 25px;
-}
-
-.prev-lightbox {
-    padding: 6px 13px 1px 10px;
-    left: 25px;
-}
-
-.snapshot-lb .modal-body {
-    padding-bottom: 45px;
-}
-
-.snapshot-lb .lightbox-caption {
-    padding: 0;
-    color: rgba(0, 0, 0, .5);
-    background: none;
-}
-
-.hero-bloc-text {
-    font-size: 38px;
-}
-
-.hero-bloc-text-sub {
-    font-size: 36px;
-}
-
-.statement-bloc-text {
-    line-height: 26px;
-    font-style: italic;
-    font-size: 20px;
-    text-align: center;
-    font-weight: lighter;
-    max-width: 520px;
-    margin: auto auto auto auto;
-}
-
-.cta-hero {
-    margin-top: 22px;
-    color: #FFFFFF;
-    text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
-    font-size: 16px;
-    font-weight: 700;
-}
-
-.social {
-    max-width: 400px;
-    margin: auto auto auto auto;
-}
-
-
-
-.med-width-whitespace {
-    max-width: 800px;
-    margin: auto auto auto auto;
-    box-shadow: 0px 0px 0px #000000;
-}
-
-
-.white {
-    color: #FFFFFF;
-}
-
-.portfolio-thumb {
-    margin-bottom: 24px;
-}
-
-.portfolio-row {
-    margin-bottom: 44px;
-    margin-top: 50px;
-}
-
-.avatar {
-    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
-}
-
-.black-background {
-    background-color: rgba(165, 147, 99, 1);
-    padding: 40px 40px 40px 40px;
-}
-
-.bold-link {
-    font-weight: 900;
-    text-decoration: underline;
-}
-
-
-
 /*------------------------------*/
 /*                              */
 /*             base             */
 /*                              */
 /*------------------------------*/
 
-body {
+
+* {
     margin: 0;
     padding: 0;
-    background: #FFF;
+    padding-inline-start: 0;
+}
+
+body {
     overflow-x: hidden;
 }
 
 a,
 button {
-    transition: all .3s ease-in-out;
     outline: none;
     text-decoration: none;
+    transition: all .3s ease-in-out;
 }
-
 a:hover {
     text-decoration: none;
-    cursor: pointer;
 }
 
 li {
@@ -279,16 +34,35 @@ li {
     margin-left: auto;
     margin-right: auto;
     max-width: 1000px;
+    padding: 50px 20px;
 }
-
-.icons {
-    margin: 15px;
-}
-
 
 .text-center {
     display: flex;
     justify-content: center;
+}
+
+/*------------------------------*/
+/*          button top          */
+/*------------------------------*/
+
+.scrollToTop {
+    align-items: center;
+    border-radius: 15px;
+    bottom: 20px;
+    display:flex;
+    height: 40px;
+    justify-content: center;
+    opacity: 0;
+    position: fixed;
+    right: 20px;
+    transition: all .3s ease-in-out;
+    width: 40px;
+    background-color: rgba(0, 0, 1, .25);
+}
+.showScrollTop {
+    opacity: 1;
+
 }
 
 /*------------------------------*/
@@ -304,265 +78,157 @@ textarea {
 }
 
 h1 {
-    color: #F3976C;
+    font-size: 40px;
     font-weight: bold;
-    
-}
-
-h1.contact {
-    color: white;
+    text-shadow: 0px 2px 0 #000000;
 }
 h2 {
     font-size: 15px;
     text-transform: uppercase;
-    font-weight: 700;
     color: #333333;
     text-align: center;
 }
 h3 {
     font-size: 22px;
     line-height: 1.4em;
-    text-shadow: 0px 4px 9px rgba(0, 0, 0, 0.6);
+    text-shadow: 0px 4px 9px #000000;
 }
 
 p {
-    font-size: 1.2em;
-    color: #000000;
+    font-size: 17px;
     text-align: center;
 }
 
+.icon-md {
+    font-size: 30px;
+}
+.icon-lg {
+    font-size: 60px;
+}
+
+.showScrollTop {
+    font-size: 14px;
+    opacity: 1;
+}
+
+/*------------------------------*/
+/*            colors            */
+/*------------------------------*/
+a, a:hover, a:active {
+    color: #000000;
+}
+h1 {
+    color: #F3976C;
+}
+h1.contact {
+    color: white;
+
+}
+h2 {
+    color: #333333;
+}
+
+p {
+    color: #000000;
+}
 p.contact {
     color: white;
-}
-
-/* colors & border */
-
-.d-bloc {
-    color: rgba(255, 255, 255, .7);
-}
-
-.d-bloc button:hover {
-    color: rgba(255, 255, 255, .9);
-}
-
-.d-bloc .icon-round,
-.d-bloc .icon-square,
-.d-bloc .icon-rounded,
-.d-bloc .icon-semi-rounded-a,
-.d-bloc .icon-semi-rounded-b {
-    border-color: rgba(255, 255, 255, .9);
-}
-
-.d-bloc .divider-h span {
-    border-color: rgba(255, 255, 255, .2);
-}
-
-.d-bloc .a-btn,
-.d-bloc .navbar a,
-.d-bloc .navbar-brand,
-.d-bloc a .icon-sm,
-.d-bloc a .icon-md,
-.d-bloc a .icon-lg,
-.d-bloc a .icon-xl,
-.d-bloc h1 a,
-.d-bloc h2 a,
-.d-bloc h3 a,
-.d-bloc h4 a,
-.d-bloc h5 a,
-.d-bloc h6 a,
-.d-bloc p a {
-    color: rgba(255, 255, 255, .6);
-}
-
-.d-bloc .a-btn:hover,
-.d-bloc .navbar a:hover,
-.d-bloc .navbar-brand:hover,
-.d-bloc a:hover .icon-sm,
-.d-bloc a:hover .icon-md,
-.d-bloc a:hover .icon-lg,
-.d-bloc a:hover .icon-xl,
-.d-bloc h1 a:hover,
-.d-bloc h2 a:hover,
-.d-bloc h3 a:hover,
-.d-bloc h4 a:hover,
-.d-bloc h5 a:hover,
-.d-bloc h6 a:hover,
-.d-bloc p a:hover {
-    color: rgba(255, 255, 255, 1);
-}
-
-.d-bloc .navbar-toggle .icon-bar {
-    background: rgba(255, 255, 255, 1);
-}
-
-.d-bloc .btn-wire,
-.d-bloc .btn-wire:hover {
-    color: rgba(255, 255, 255, 1);
-    border-color: rgba(255, 255, 255, 1);
-}
-
-.d-bloc .panel {
-    color: rgba(0, 0, 0, .5);
-}
-
-.d-bloc .panel button:hover {
-    color: rgba(0, 0, 0, .7);
-}
-
-.d-bloc .panel icon {
-    border-color: rgba(0, 0, 0, .7);
-}
-
-.d-bloc .panel .divider-h span {
-    border-color: rgba(0, 0, 0, .1);
-}
-
-.d-bloc .panel .a-btn {
-    color: rgba(0, 0, 0, .6);
-}
-
-.d-bloc .panel .a-btn:hover {
-    color: rgba(0, 0, 0, 1);
-}
-
-.d-bloc .panel .btn-wire,
-.d-bloc .panel .btn-wire:hover {
-    color: rgba(0, 0, 0, .7);
-    border-color: rgba(0, 0, 0, .3);
-}
-
-.d-bloc .panel,
-.l-bloc {
-    color: rgba(0, 0, 0, .5);
-}
-
-.d-bloc .panel button:hover,
-.l-bloc button:hover {
-    color: rgba(0, 0, 0, .7);
-}
-
-.l-bloc .icon-round,
-.l-bloc .icon-square,
-.l-bloc .icon-rounded,
-.l-bloc .icon-semi-rounded-a,
-.l-bloc .icon-semi-rounded-b {
-    border-color: rgba(0, 0, 0, .7);
-}
-
-.d-bloc .panel .divider-h span,
-.l-bloc .divider-h span {
-    border-color: rgba(0, 0, 0, .1);
-}
-
-.d-bloc .panel .a-btn,
-.l-bloc .a-btn,
-.l-bloc .navbar a,
-.l-bloc .navbar-brand,
-.l-bloc a .icon-sm,
-.l-bloc a .icon-md,
-.l-bloc a .icon-lg,
-.l-bloc a .icon-xl,
-.l-bloc h1 a,
-.l-bloc h2 a,
-.l-bloc h3 a,
-.l-bloc h4 a,
-.l-bloc h5 a,
-.l-bloc h6 a,
-.l-bloc p a {
-    color: rgba(0, 0, 0, .6);
-}
-
-.d-bloc .panel .a-btn:hover,
-.l-bloc .a-btn:hover,
-.l-bloc .navbar a:hover,
-.l-bloc .navbar-brand:hover,
-.l-bloc a:hover .icon-sm,
-.l-bloc a:hover .icon-md,
-.l-bloc a:hover .icon-lg,
-.l-bloc a:hover .icon-xl,
-.l-bloc h1 a:hover,
-.l-bloc h2 a:hover,
-.l-bloc h3 a:hover,
-.l-bloc h4 a:hover,
-.l-bloc h5 a:hover,
-.l-bloc h6 a:hover,
-.l-bloc p a:hover {
-    color: rgba(0, 0, 0, 1);
-}
-
-.l-bloc .navbar-toggle .icon-bar {
-    color: rgba(0, 0, 0, .6);
-}
-
-.d-bloc .panel .btn-wire,
-.d-bloc .panel .btn-wire:hover,
-.l-bloc .btn-wire,
-.l-bloc .btn-wire:hover {
-    color: rgba(0, 0, 0, .7);
-    border-color: rgba(0, 0, 0, .3);
 }
 
 .bgc-atomic-tangerine {
     background-color: #F3976C;
 }
-
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #FFFFFF;
 }
-
 .btn-atomic-tangerine:hover {
     background: #c27956;
     color: #FFFFFF;
 }
+.btn-d,
+.btn-d:hover,
+.btn-d:focus {
+    color: #FFF;
+}
 
+.icons {
+    color: #808080;
+}
 .ltc-white {
     color: #FFFFFF;
 }
-
 .ltc-white:hover {
-    color: #cccccc;
+    color: #CCCCCC;
 }
-
 .ltc-atomic-tangerine {
     color: #F3976C;
 }
-
 .ltc-atomic-tangerine:hover {
-    color: #c27956;
+    color: #C27956;
 }
-
-.icon-dark-slate-blue {
-    color: #364577;
-    border-color: #364577;
+.social {
+    color: #FFF;
+}
+.white {
+    color: #FFFFFF;
+}
+.black-background {
+    background-color: rgba(165, 147, 99, 1);
 }
 
 /*------------------------------*/
-/*              bg              */
+/*          background          */
 /*------------------------------*/
 
 .bg-dots-bg {
     background-image: url("./assets/dots-bg.png");
     background-repeat: repeat;
+    background-position: center top;
 }
-
 .bg-lines-h2-bg {
     background-image: url("./assets/lines-h2-bg.png");
     background-repeat: repeat;
+    background-position: center top;
 }
-
 .bg-banniere {
     background-image: url("./assets/background/la-chouette-agence-banniere.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center top;
 }
-
 .bg-presentation {
     background-image: url("./assets/background/image-de-presentation.bmp");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center top;
 }
 
+/*------------------------------*/
+/*            button            */
+/*------------------------------*/
+
+.btn-rd {
+    border-radius: 40px;
+}
+.btn-clean {
+    border: 1px solid rgba(0, 0, 0, .08);
+    border-bottom-color: rgba(0, 0, 0, .1);
+    text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
+    box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
+}
+.btn:hover {
+    transform: scale(1.2);
+}
+
+.cta-hero {
+    margin-top: 22px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    padding: 12px 28px 12px 28px;
+    font-size: 16px;
+    font-weight: 700;
+}
 
 /*------------------------------*/
 /*                              */
@@ -570,71 +236,61 @@ p.contact {
 /*                              */
 /*------------------------------*/
 
-header {
-    margin: 30px;
-    padding: 0;
-}
-
 #bloc-0 {
-    box-sizing: border-box;
-    height: fit-content;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    justify-content: space-between;
+    padding: 30px;
     position: relative;
 }
 
 /*------------------------------*/
 /*            navbar            */
 /*------------------------------*/
-#nav-toggle {
-    position: absolute;
-    bottom: -20px;
-    left: 0;
-}
-.navbar-nav {
+
+.navbar {
     font-weight: bold;
     text-transform: uppercase;
     width: fit-content;
+}
+
+.navbar-nav {
     display: flex;
     flex-direction: row;
 }
 
-.navbar-nav li a{
+.navbar-nav li a {
+    border-radius: 25px;
+    color: #000000;
     margin: 10px;
     padding: 20px;
-    border-radius: 25px;
     transition: background-color 0.5s linear;
+    transition: color 0.5s linear;
 }
 .navbar-nav li a:hover {
+    color: #FFF;
     background-color:rgba(0, 0, 1, .25);
     border-radius: 25px;
 }
 
+#nav-toggle {
+    bottom: -20px;
+    left: 0;
+    position: absolute;
+}
+
+/*
 .navbar-toggle {
     margin: 10px 10px 0 0;
     border: 0px;
 }
-
 .navbar-toggle .icon-bar {
     background-color: rgba(0, 0, 0, .5);
     width: 26px;
-}
-
-/*------------------------------*/
-/*            spinner           */
-/*------------------------------*/
-
-#page-loading-blocs-notifaction {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    z-index: 100000;
-    background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
-}
-
+} */
 
 /*------------------------------*/
 /*                              */
@@ -642,48 +298,59 @@ header {
 /*                              */
 /*------------------------------*/
 
+/*------------------------------*/
+/*         presentation         */
+/*------------------------------*/
 
-/* presentation */
 .presentation {
-    display: flex;
-    justify-content: center;
     align-items: center;
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    text-align: center;
     width: 100%;
 }
 
-/* services */
+/*------------------------------*/
+/*           services           */
+/*------------------------------*/
 .services {
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+    max-width: 800px;
+}
+
+.services-plot {
+    font-size: 25px;
+}
+.services__list {
+    margin: 50px 0;
+}
+.services__list h2 {
+    margin: 25px;
 }
 .services__list-icon {
     display: flex;
-    flex-direction: row;
 }
 .services__list-icon-column {
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-    margin: 20px;
-    width: 300px;
-}
-.services__list-icon-column p {
-    text-align: center;
-    padding: 5px;
+    margin: 15px;
+    width: 225px;
 }
 
-/* citation */
+
+/*      citations       */
 .services__citation {
+    border-left: rgba(0, 0, 1, .25) solid 3px;
     display: flex;
     justify-content: center;
-    border-left: rgba(0, 0, 1, .25) solid 3px;
 }
 
 .citation {
@@ -691,59 +358,90 @@ header {
     margin-left: auto;
     margin-right: auto;
 }
-
 .citation__text {
     color:rgba(0, 0, 0, 0.5);
     text-align: justify;
-    font-weight: bold;
+    font-weight: 600;
     font-style: italic;
 }
 
 figure {
     margin: 0;
-    padding: 0 0 20px 20px;
+    padding: 0 20px;
 }
 
-/* about us */
 
+/*       about us       */
+.about-us {
+    max-width: 800px;
+}
 .about-us-wanted {
     font-weight: bold;
-    text-shadow: 0px 4px 9px rgba(0, 0, 0, 0.6);
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
+    margin: 15px;
+    font-size: 25px;
+}
+.black-background {
+    padding: 40px;
 }
 
-/* portfolio */
+/*       portfolio       */
+.portfolio p {
+    font-size: 25px;
+}
+.portfolio-row {
+    display: flex;
+    justify-content: center;
+}
+.portfolio-row-box {
+    max-width: 300px;
+    margin: 25px;
+}
+.portfolio-row-box p {
+    font-size: 17px;
+    margin-top: 15px;
+}
+.portfolio-thumb {
+    margin-bottom: 24px;
+}
 
 article img {
+    box-sizing: border-box;
     max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
     transform: scale(1);
     transition: transform 0.25s linear;
     display: flex;
 }
 article img:hover {
-    transform: scale(1.2);
+    transform: scale(1.05);
     transition: transform 0.25s linear;
 }
 
-.portfolio-row {
-    display: flex;
-    flex-direction: row;
+/*------------------------------*/
+/*            contact           */
+/*------------------------------*/
+
+.contact-us {
+    font-size: 25px;
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
 }
 
-.col-sm-6 {
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 
-/* CONTACT  */
 
-/* talking */
+/*------------------------------*/
+/*            contact           */
+/*------------------------------*/
+
+/*            talking           */
+
 .talking {
     height: 400px;
 }
 
-/* formulaire */
+/*          formulaire          */
 .formulaire,
 .formulaire-button {
     display: flex;
@@ -797,6 +495,7 @@ footer {
 }
 
 .social {
+    max-width: 400px;
     margin: 15px;
 }
 footer,
@@ -805,14 +504,11 @@ footer,
     justify-content: center;
 }
 
-/* // utile que en desktop // */
-.bloc-lg {
-    padding: 100px 50px;
-}
 
-.bloc-md {
-    padding: 50px;
-}
+/* media quieries */
+
+/* header */
+
 
 /* // utile que en desktop // */
 /* 
