--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 * {
 	margin: 0;
 	padding: 0;
-	padding-inline-start: unset;
 	/*------------------------------
     Permet de remettre à zéro toutes les propriétés afin de pouvoir agir entièrement notre code
     Pourquoi est-ce utile ? Les navigateurs appliquent des valeurs par défaut à certaines propriétés
@@ -458,7 +457,7 @@ form {
 	min-height: 40px;
 	padding: 6px 12px;
 	transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-	white-space: wrap;
+	white-space: normal;
 }
 
 .form-control:focus {
